--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,15 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+#Ballerina configuartion file
+ballerina.conf
+
+#Target folder of ballerina project
+/target
+
+#json files created inside resources folder
+**/resources
+
+# IDEA file
+.idea
