--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
               uses: ballerina-platform/ballerina-action/@swan-lake-connector-release
               with:
                   args:
-                      build -c
+                      build -c --skip-tests
               env:
                   ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
                   CLIENT_ID: ${{ secrets.CLIENT_ID }}
