--- a/calendar/Ballerina.toml
+++ b/calendar/Ballerina.toml
@@ -1,14 +1,15 @@
 [package]
 org= "ballerinax"
-name= "googleapis_calendar"
-version= "0.1.4"
+name= "googleapis.calendar"
+version= "0.1.5"
+export= ["googleapis.calendar", "googleapis.calendar.listener"]
 license= ["Apache-2.0"]
 authors = ["Ballerina"]
 keywords = ["google", "calendar"]
 repository = "https://github.com/ballerina-platform/module-ballerinax-googleapis.calendar"
 
 [[platform.java11.dependency]]
-path = "../java-wrapper/build/libs/java-wrapper-0.1.4.jar"
+path = "../java-wrapper/build/libs/java-wrapper-0.1.5.jar"
 groupId = "org.ballerinalang.googleapis.calendar"
 artifactId = "java-wrapper"
-version = "0.1.4"
+version = "0.1.5"
