--- a/calendar/Dependencies.toml
+++ b/calendar/Dependencies.toml
@@ -33,4 +33,9 @@ org = "ballerina"
 name = "task"
 version = "2.0.0-beta.1"
 
+[[dependency]]
+org = "ballerina"
+name = "jwt"
+version = "1.1.0-beta.1"
+
 
