--- a/calendar/Dependencies.toml
+++ b/calendar/Dependencies.toml
@@ -38,4 +38,9 @@ org = "ballerina"
 name = "task"
 version = "2.0.0-alpha9"
 
+[[dependency]]
+org = "ballerina"
+name = "jwt"
+version = "1.1.0-alpha8"
+
 
