Prepare for v2.0.0 release

--- a/calendar/Ballerina.toml
+++ b/calendar/Ballerina.toml
@@ -9,7 +9,7 @@ keywords = ["Productivity/Calendars", "Cost/Free", "Vendor/Google"]
 repository = "https://github.com/ballerina-platform/module-ballerinax-googleapis.calendar"
 
 [[platform.java11.dependency]]
-path = "../java-wrapper/build/libs/java-wrapper-0.1.6-SNAPSHOT.jar"
+path = "../java-wrapper/build/libs/java-wrapper-2.0.0.jar"
 groupId = "org.ballerinalang.googleapis.calendar"
 artifactId = "java-wrapper"
-version = "0.1.6-SNAPSHOT"
+version = "2.0.0"
