--- a/calendar/Ballerina.toml
+++ b/calendar/Ballerina.toml
@@ -1,7 +1,7 @@
 [package]
 org= "ballerinax"
 name= "googleapis.calendar"
-version= "2.0.0"
+version= "2.1.0"
 export= ["googleapis.calendar", "googleapis.calendar.listener"]
 license= ["Apache-2.0"]
 authors = ["Ballerina"]
@@ -9,7 +9,7 @@ keywords = ["Productivity/Calendars", "Cost/Free", "Vendor/Google"]
 repository = "https://github.com/ballerina-platform/module-ballerinax-googleapis.calendar"
 
 [[platform.java11.dependency]]
-path = "../java-wrapper/build/libs/java-wrapper-0.1.6-SNAPSHOT.jar"
+path = "../java-wrapper/build/libs/java-wrapper-2.1.0.jar"
 groupId = "org.ballerinalang.googleapis.calendar"
 artifactId = "java-wrapper"
-version = "0.1.6-SNAPSHOT"
+version = "2.1.0"
