Modify connector icon

--- a/calendar/Ballerina.toml
+++ b/calendar/Ballerina.toml
@@ -6,6 +6,7 @@ export= ["googleapis.calendar", "googleapis.calendar.listener"]
 license= ["Apache-2.0"]
 authors = ["Ballerina"]
 keywords = ["Productivity/Calendars", "Cost/Free", "Vendor/Google"]
+icon = "icon.png"
 repository = "https://github.com/ballerina-platform/module-ballerinax-googleapis.calendar"
 
 [[platform.java11.dependency]]
