--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
             - name: Ballerina Test
               uses: ballerina-platform/ballerina-action/@nightly
               with:
-                  args: test
+                  args: test --code-coverage
               env:
                   WORKING_DIR: ./calendar
                   JAVA_HOME: /usr/lib/jvm/default-jvm
@@ -39,3 +39,18 @@ jobs:
                   REFRESH_TOKEN: ${{ secrets.REFRESH_TOKEN }}
                   REFRESH_URL: ${{ secrets.REFRESH_URL }}
                   ADDRESS: ${{ secrets.ADDRESS }}
+
+            # Read the ballerina test results
+            - name: Read Ballerina Test Results
+              id: test_results
+              run: |
+                content=`cat ./calendar/target/report/test_results.json`                
+                content="${content//'%'/'%25'}"
+                content="${content//$'\n'/'%0A'}"
+                content="${content//$'\r'/'%0D'}"
+                echo "::set-output name=testResultsJson::$content"
+
+            # Print the code coverage information
+            - name: Code Coverage
+              run: |
+                echo "Code Coverage Percentage : ${{fromJson(steps.test_results.outputs.testResultsJson).coveragePercentage}}"
