--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -51,7 +51,7 @@ jobs:
               uses: ballerina-platform/ballerina-action/@nightly
               with:
                   args:
-                      test
+                      test --code-coverage
               env:
                 WORKING_DIR: ./calendar
                 JAVA_HOME: /usr/lib/jvm/default-jvm
@@ -60,6 +60,21 @@ jobs:
                 REFRESH_TOKEN: ${{ secrets.REFRESH_TOKEN }}
                 REFRESH_URL: ${{ secrets.REFRESH_URL }}
                 ADDRESS: ${{ secrets.ADDRESS }}
+
+            # Read the ballerina test results
+            - name: Read Ballerina Test Results
+              id: test_results
+              run: |
+                content=`cat ./calendar/target/report/test_results.json`                
+                content="${content//'%'/'%25'}"
+                content="${content//$'\n'/'%0A'}"
+                content="${content//$'\r'/'%0D'}"
+                echo "::set-output name=testResultsJson::$content"
+
+            # Print the code coverage information
+            - name: Code Coverage
+              run: |
+                echo "Code Coverage Percentage : ${{fromJson(steps.test_results.outputs.testResultsJson).coveragePercentage}}"
 
             # Send notification when build fails
             - name: Notify failure
