--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -17,25 +17,6 @@ jobs:
             # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
             - uses: actions/checkout@v2
 
-            # Set up Java Environment
-            - name: Set up JDK 11
-              uses: actions/setup-java@v1
-              with:
-                java-version: 11
-
-            # Grant execute permission to the gradlew script
-            - name: Grant execute permission for gradlew
-              run: chmod +x gradlew
-
-            # Build the project with Gradle
-            - name: Build with Gradle
-              env:
-                packageUser: ${{ secrets.BALLERINA_BOT_USERNAME }}
-                packagePAT: ${{ secrets.BALLERINA_BOT_TOKEN }}
-                JAVA_OPTS: -DBALLERINA_DEV_COMPILE_BALLERINA_ORG=true
-              run: |
-                ./gradlew build
-
             # Build the ballerina project
             - name: Ballerina Build
               uses: ballerina-platform/ballerina-action/@nightly
@@ -44,7 +25,6 @@ jobs:
                       pack
               env:
                 WORKING_DIR: ./calendar
-                JAVA_HOME: /usr/lib/jvm/default-jvm
             
             # Test the ballerina project
             - name: Ballerina Build
@@ -54,12 +34,10 @@ jobs:
                       test --code-coverage
               env:
                 WORKING_DIR: ./calendar
-                JAVA_HOME: /usr/lib/jvm/default-jvm
                 CLIENT_ID: ${{ secrets.CLIENT_ID }}
                 CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
                 REFRESH_TOKEN: ${{ secrets.REFRESH_TOKEN }}
                 REFRESH_URL: ${{ secrets.REFRESH_URL }}
-                ADDRESS: ${{ secrets.ADDRESS }}
 
             # Read the ballerina test results
             - name: Read Ballerina Test Results
@@ -74,6 +52,8 @@ jobs:
             # Print the code coverage information
             - name: Code Coverage
               run: |
+                echo "Covered Lines : ${{fromJson(steps.test_results.outputs.testResultsJson).coveredLines}}"
+                echo "Total Code Lines : $(expr ${{fromJson(steps.test_results.outputs.testResultsJson).missedLines}} + ${{fromJson(steps.test_results.outputs.testResultsJson).coveredLines}})"
                 echo "Code Coverage Percentage : ${{fromJson(steps.test_results.outputs.testResultsJson).coveragePercentage}}"
 
             # Send notification when build fails
