--- a/calendar/Dependencies.toml
+++ b/calendar/Dependencies.toml
@@ -93,9 +93,6 @@ dependencies = [
 org = "ballerina"
 name = "jballerina.java"
 version = "0.0.0"
-modules = [
-	{org = "ballerina", packageName = "jballerina.java", moduleName = "jballerina.java"}
-]
 
 [[package]]
 org = "ballerina"
@@ -160,9 +157,6 @@ name = "lang.runtime"
 version = "0.0.0"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"}
-]
-modules = [
-	{org = "ballerina", packageName = "lang.runtime", moduleName = "lang.runtime"}
 ]
 
 [[package]]
@@ -252,9 +246,6 @@ dependencies = [
 	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerina", name = "time"}
 ]
-modules = [
-	{org = "ballerina", packageName = "task", moduleName = "task"}
-]
 
 [[package]]
 org = "ballerina"
@@ -291,39 +282,20 @@ modules = [
 ]
 
 [[package]]
-org = "ballerina"
-name = "uuid"
-version = "1.2.0"
-dependencies = [
-	{org = "ballerina", name = "crypto"},
-	{org = "ballerina", name = "jballerina.java"},
-	{org = "ballerina", name = "lang.int"},
-	{org = "ballerina", name = "regex"}
-]
-modules = [
-	{org = "ballerina", packageName = "uuid", moduleName = "uuid"}
-]
-
-[[package]]
 org = "ballerinax"
 name = "googleapis.calendar"
-version = "2.2.0"
+version = "3.0.0"
 dependencies = [
 	{org = "ballerina", name = "http"},
-	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerina", name = "jwt"},
-	{org = "ballerina", name = "lang.runtime"},
 	{org = "ballerina", name = "log"},
 	{org = "ballerina", name = "os"},
-	{org = "ballerina", name = "task"},
 	{org = "ballerina", name = "test"},
 	{org = "ballerina", name = "time"},
-	{org = "ballerina", name = "url"},
-	{org = "ballerina", name = "uuid"}
+	{org = "ballerina", name = "url"}
 ]
 modules = [
-	{org = "ballerinax", packageName = "googleapis.calendar", moduleName = "googleapis.calendar"},
-	{org = "ballerinax", packageName = "googleapis.calendar", moduleName = "googleapis.calendar.listener"}
+	{org = "ballerinax", packageName = "googleapis.calendar", moduleName = "googleapis.calendar"}
 ]
 
 
