Generate code coverage reports using codecov

--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -31,7 +31,7 @@ jobs:
               uses: ballerina-platform/ballerina-action/@nightly
               with:
                   args:
-                      test --code-coverage
+                      test --test-report --code-coverage --coverage-format=xml
               env:
                 WORKING_DIR: ./calendar
                 CLIENT_ID: ${{ secrets.CLIENT_ID }}
@@ -39,23 +39,8 @@ jobs:
                 REFRESH_TOKEN: ${{ secrets.REFRESH_TOKEN }}
                 REFRESH_URL: ${{ secrets.REFRESH_URL }}
 
-            # Read the ballerina test results
-            - name: Read Ballerina Test Results
-              id: test_results
-              run: |
-                content=`cat ./calendar/target/report/test_results.json`                
-                content="${content//'%'/'%25'}"
-                content="${content//$'\n'/'%0A'}"
-                content="${content//$'\r'/'%0D'}"
-                echo "::set-output name=testResultsJson::$content"
-
-            # Print the code coverage information
-            - name: Code Coverage
-              run: |
-                echo "Covered Lines : ${{fromJson(steps.test_results.outputs.testResultsJson).coveredLines}}"
-                echo "Total Code Lines : $(expr ${{fromJson(steps.test_results.outputs.testResultsJson).missedLines}} + ${{fromJson(steps.test_results.outputs.testResultsJson).coveredLines}})"
-                echo "Code Coverage Percentage : ${{fromJson(steps.test_results.outputs.testResultsJson).coveragePercentage}}"
-
+            - name: Upload coverage reports to Codecov
+              uses: codecov/codecov-action@v3
             # Send notification when build fails
             - name: Notify failure
               if: ${{ failure() }}
