Update the github workflows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,39 +9,55 @@ on:
       check_connector_for_breaking_changes
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v2
-            - name: Ballerina Build
-              uses: ballerina-platform/ballerina-action/@nightly
-              with:
-                  args: pack
-              env:
-                  WORKING_DIR: ./calendar
-            - name: Ballerina Test
-              uses: ballerina-platform/ballerina-action/@nightly
-              with:
-                  args: test --test-report --code-coverage --coverage-format=xml
-              env:
-                  WORKING_DIR: ./calendar
-                  CLIENT_ID: ${{ secrets.CLIENT_ID }}
-                  CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
-                  REFRESH_TOKEN: ${{ secrets.REFRESH_TOKEN }}
-                  REFRESH_URL: ${{ secrets.REFRESH_URL }}
-            - name: Upload coverage reports to Codecov
-              uses: codecov/codecov-action@v3
-            - name: Alert notifier on failure
-              if: failure() && (github.event.action == 'check_connector_for_breaking_changes')
-              run: |
-                curl -X POST \
-                'https://api.github.com/repos/ballerina-platform/ballerina-release/dispatches' \
-                --header 'Accept: application/vnd.github.v3+json' \
-                --header 'Authorization: Bearer ${{ secrets.BALLERINA_BOT_TOKEN }}' \
-                --data-raw '{
-                  "event_type": "notify-ballerinax-connector-build-failure",
-                  "client_payload": {
-                    "repoName": "module-ballerinax-googleapis.calendar",
-                    "workflow": "CI"
-                  }
-                }'
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      # Setup Ballerina Environment
+      - name: Set Up Ballerina
+        uses: ballerina-platform/setup-ballerina@v1.1.0
+        with:
+          version: latest
+
+      # Build Ballerina Project
+      - name: Ballerina Build
+        run: bal pack ./ballerina
+        env:
+          JAVA_HOME: /usr/lib/jvm/default-jvm
+
+      # Build Module Examples
+      - name: Ballerina Examples Build
+        run: chmod +x ./examples/build.sh && ./examples/build.sh
+        env:
+          JAVA_HOME: /usr/lib/jvm/default-jvm
+
+      # Test Ballerina Project
+      - name: Ballerina Test
+        run: bal test --test-report --code-coverage --coverage-format=xml
+        env:
+          WORKING_DIR: ./calendar
+          CLIENT_ID: ${{ secrets.CLIENT_ID }}
+          CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+          REFRESH_TOKEN: ${{ secrets.REFRESH_TOKEN }}
+          REFRESH_URL: ${{ secrets.REFRESH_URL }}
+          JAVA_HOME: /usr/lib/jvm/default-jvm
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+
+      # Send notification when build fails
+      - name: Alert notifier on failure
+        if: failure() && (github.event.action == 'check_connector_for_breaking_changes')
+        run: |
+          curl -X POST \
+          'https://api.github.com/repos/ballerina-platform/ballerina-release/dispatches' \
+          --header 'Accept: application/vnd.github.v3+json' \
+          --header 'Authorization: Bearer ${{ secrets.BALLERINA_BOT_TOKEN }}' \
+          --data-raw '{
+            "event_type": "notify-ballerinax-connector-build-failure",
+            "client_payload": {
+              "repoName": "module-ballerinax-googleapis.calendar",
+              "workflow": "CI"
+            }
+          }'
