--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -22,7 +22,7 @@ jobs:
 
       # Build Module Examples
       - name: Ballerina Examples Build
-        run: chmod +x ./examples/build.sh && ./examples/build.sh
+        run: chmod +x ./examples/build.sh && ./examples/build.sh build
         env:
           JAVA_HOME: /usr/lib/jvm/default-jvm
 
@@ -30,10 +30,9 @@ jobs:
       - name: Ballerina Test
         # tests will be skipped if the PR is from a forked repository (as the secrets are not available)
         if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
-        run: bal test --test-report --code-coverage --coverage-format=xml
+        run: bal test ./ballerina --test-report --code-coverage --coverage-format=xml
         env:
-          WORKING_DIR: ./calendar
-          CLIENT_ID: ${{ secrets.CLIENT_ID }}
+          CLIENT_ID: ${{ secrets.working-directory: ./ballerinaCLIENT_ID }}
           CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
           REFRESH_TOKEN: ${{ secrets.REFRESH_TOKEN }}
           REFRESH_URL: ${{ secrets.REFRESH_URL }}
