--- a/build-config/resources/Ballerina.toml
+++ b/build-config/resources/Ballerina.toml
@@ -2,7 +2,7 @@
 distribution = "2201.8.2"
 org = "ballerinax"
 name = "googleapis.calendar"
-version = "0.1.0"
+version = "@toml.version@"
 license = ["Apache-2.0"]
 authors = ["Ballerina"]
 keywords = ["Productivity/Calendars", "Cost/Free", "Vendor/Google"]
