--- a/ballerina/build.gradle
+++ b/ballerina/build.gradle
@@ -48,7 +48,8 @@ ballerina {
     packageOrganization = packageOrg
     module = packageName
     testCoverageParam = "--code-coverage --coverage-format=xml"
-    buildOnDockerImage = "nightly"
+    isConnector = true
+    platform = "any"
 }
 
 task updateTomlFiles {
