--- a/build-config/resources/Ballerina.toml
+++ b/build-config/resources/Ballerina.toml
@@ -2,6 +2,7 @@
 distribution = "2201.8.0"
 org = "ballerinax"
 name = "googleapis.calendar"
+export=["googleapis.calendar"]
 version = "@toml.version@"
 license = ["Apache-2.0"]
 authors = ["Ballerina"]
