--- a/build-config/resources/Ballerina.toml
+++ b/build-config/resources/Ballerina.toml
@@ -1,8 +1,8 @@
 [package]
 distribution = "2201.8.0"
 org = "ballerinax"
-name = "googleapis.calendar"
-export=["googleapis.calendar"]
+name = "googleapis.gcalendar"
+export=["googleapis.gcalendar"]
 version = "@toml.version@"
 license = ["Apache-2.0"]
 authors = ["Ballerina"]
