--- a/build.gradle
+++ b/build.gradle
@@ -61,8 +61,8 @@ allprojects {
 def moduleVersion = project.version.replace("-SNAPSHOT", "")
 
 task build {
-    dependsOn(':googleapis.calendar-ballerina:build')
-    dependsOn(':googleapis.calendar-examples:build')
+    dependsOn(':googleapis.gcalendar-ballerina:build')
+    dependsOn(':googleapis.gcalendar-examples:build')
 }
 
 release {
