--- a/.github/workflows/build-with-bal-test-native.yml
+++ b/.github/workflows/build-with-bal-test-native.yml
@@ -16,4 +16,4 @@ jobs:
     uses: ballerina-platform/ballerina-standard-library/.github/workflows/build-with-bal-test-graalvm-connector-template.yml@main
     secrets: inherit
     with:
-      additional-build-flags: "-x :googleapis.calendar-examples:build -Pgroups=mock"
+      additional-build-flags: "-x :googleapis.gcalendar-examples:build -Pgroups=mock"
