Disable example builds in the daily build workflow

--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -12,3 +12,5 @@ jobs:
     secrets: inherit
     with:
       repo-name: module-ballerinax-googleapis.calendar
+      additional-build-flags: "-x :googleapis.gcalendar-examples:build"
+      additional-test-flags: "-x :googleapis.gcalendar-examples:build"
