Update the publish release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,14 +1,15 @@
-name: Deployment
+name: Publish Release
 
 on:
-  release:
-    types: [published]
+    workflow_dispatch:
+    release:
+        types: [published]
 
 jobs:
     build:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v2
+            - uses: actions/checkout@v4
             - name: Ballerina Build
               uses: ballerina-platform/ballerina-action/@2201.4.1
               with:
