Point the generation path to the `modules/oas` directory

--- a/.github/workflows/regenerate-connector.yml
+++ b/.github/workflows/regenerate-connector.yml
@@ -64,3 +64,4 @@ jobs:
       distribution-zip: ${{ inputs.distribution-zip }}
       auto-merge: ${{ inputs.auto-merge }}
       ballerina-version: ${{ inputs.ballerina-version }}
+      generation-path: "ballerina/modules/oas"
